--- a/env.example
+++ b/env.example
@@ -14,3 +14,8 @@ DIRECT_URL="postgresql://postgres.fkffeemwflechywrmnlv:r5iymaFUTV0#CHoc@aws-1-eu
 
 # Environment
 NODE_ENV=development
+
+# Cloudinary Configuration
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
