--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "used-parts-inventory",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -20,9 +20,11 @@
   "dependencies": {
     "@prisma/client": "^6.15.0",
     "@supabase/supabase-js": "^2.56.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
+    "next-cloudinary": "^6.16.0",
     "prisma": "^6.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
