--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "used-parts-inventory",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -15,20 +15,30 @@
     "db:backup": "node scripts/backup-restore.js backup",
     "db:restore": "node scripts/backup-restore.js restore",
     "db:backup:list": "node scripts/backup-restore.js list",
-    "db:backup:cleanup": "node scripts/backup-restore.js cleanup"
+    "db:backup:cleanup": "node scripts/backup-restore.js cleanup",
+    "db:indexes": "node scripts/apply-indexes.js",
+    "validate": "tsx scripts/validate-data.ts",
+    "fix:critical": "node scripts/fix-critical-issues.js",
+    "logs:stats": "node scripts/monitor-logs.js stats",
+    "logs:monitor": "node scripts/monitor-logs.js monitor",
+    "logs:cleanup": "node scripts/monitor-logs.js cleanup"
   },
   "dependencies": {
     "@prisma/client": "^6.15.0",
     "@supabase/supabase-js": "^2.56.1",
+    "@types/winston": "^2.4.4",
     "cloudinary": "^2.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
-    "next": "14.0.4",
+    "next": "^14.2.32",
     "next-cloudinary": "^6.16.0",
     "prisma": "^6.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.0.0"
+    "sharp": "^0.34.3",
+    "tailwind-merge": "^2.0.0",
+    "winston": "^3.17.0",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -36,7 +46,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "14.2.32",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "tsx": "^4.20.5",
