fix: исправление проблемы с Prisma на Vercel - обновлен скрипт сборки для генерации Prisma Client - создан скрипт настройки Prisma для Vercel - добавлены переменные окружения в vercel.json - улучшена конфигурация Prisma - созданы руководства по настройке

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,9 @@
     }
   },
   "env": {
-    "NODE_ENV": "production"
+    "NODE_ENV": "production",
+    "PRISMA_GENERATE_DATAPROXY": "true",
+    "PRISMA_CLI_QUERY_ENGINE_TYPE": "binary"
   },
   "regions": ["fra1"],
   "headers": [
