Обновление проекта: исправления базы данных, API и интерфейса

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "node scripts/vercel-prisma-setup.js && prisma generate && next build",
+    "build": "node scripts/fix-prisma-vercel.js && prisma generate && next build",
+    "postinstall": "prisma generate",
     "start": "next start",
     "lint": "next lint",
     "db:generate": "prisma generate",
