Обновление логгера и документации: добавлен Winston logger, тестовые скрипты и документация по логированию

--- a/package.json
+++ b/package.json
@@ -21,30 +21,31 @@
   "dependencies": {
     "@prisma/client": "^6.15.0",
     "@supabase/supabase-js": "^2.56.1",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/winston": "^2.4.4",
+    "autoprefixer": "^10.0.1",
     "cloudinary": "^2.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
     "next": "^14.2.32",
     "next-cloudinary": "^6.16.0",
+    "postcss": "^8",
     "prisma": "^6.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.34.3",
     "tailwind-merge": "^2.0.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5",
     "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^4.1.5"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.32",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "tsx": "^4.20.5",
-    "typescript": "^5"
+    "tsx": "^4.20.5"
   }
 }
