--- a/.vercelignore
+++ b/.vercelignore
@@ -1,79 +1,19 @@
-# Git
-.git
-.gitignore
-
-# Dependencies
+# Исключаем ненужные файлы из деплоя
 node_modules
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Environment files
-.env
+.git
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
-# Build outputs
-.next
-out
-dist
-
-# Logs
-logs
 *.log
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
-coverage
-
-# nyc test coverage
-.nyc_output
-
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
-.env
-
-# IDE files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.DS_Store
+*.tsbuildinfo
+next-env.d.ts
 .vscode
 .idea
 *.swp
 *.swo
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Prisma
-prisma/migrations
-prisma/dev.db
-prisma/dev.db-journal
-
-# Scripts
-scripts/
-*.md
+*~
